# ChangeLog for perl-core/Digest-SHA
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/Digest-SHA/ChangeLog,v 1.30 2011/12/13 11:22:56 naota Exp $

  13 Dec 2011; Naohiro Aota <naota@gentoo.org> Digest-SHA-5.630.0.ebuild:
  Add ~x86-fbsd

*Digest-SHA-5.630.0 (13 Nov 2011)

  13 Nov 2011; Torsten Veller <tove@gentoo.org> +Digest-SHA-5.630.0.ebuild:
  Version bump

  28 Sep 2011; Fabian Groffen <grobian@gentoo.org> Digest-SHA-5.620.0.ebuild:
  Marked ~sparc64-solaris

  26 Sep 2011; Fabian Groffen <grobian@gentoo.org> Digest-SHA-5.620.0.ebuild:
  Marked ~x86-freebsd

  25 Aug 2011; Fabian Groffen <grobian@gentoo.org> Digest-SHA-5.620.0.ebuild:
  Marked ~m68k-mint, bug #380531

  09 Aug 2011; Markus Duft <mduft@gentoo.org> Digest-SHA-5.620.0.ebuild:
  added ~x86-interix prefix keyword

  08 Aug 2011; Fabian Groffen <grobian@gentoo.org> Digest-SHA-5.620.0.ebuild:
  Marked ~x64-macos

  28 Jul 2011; Michael Haubenwallner <haubi@gentoo.org>
  Digest-SHA-5.620.0.ebuild:
  more prefix keywords: ~ppc-aix ~hppa-hpux ~ia64-hpux

*Digest-SHA-5.620.0 (15 May 2011)

  15 May 2011; Torsten Veller <tove@gentoo.org> +Digest-SHA-5.620.0.ebuild:
  Version bump

*Digest-SHA-5.610.0 (10 Mar 2011)

  10 Mar 2011; Torsten Veller <tove@gentoo.org> +Digest-SHA-5.610.0.ebuild:
  Version bump

*Digest-SHA-5.600.0 (04 Mar 2011)

  04 Mar 2011; Torsten Veller <tove@gentoo.org> +Digest-SHA-5.600.0.ebuild:
  Version bump

*Digest-SHA-5.500 (13 Jan 2011)

  13 Jan 2011; Torsten Veller <tove@gentoo.org> +Digest-SHA-5.500.ebuild:
  Version bump

  07 Dec 2010; Matt Turner <mattst88@gentoo.org> Digest-SHA-5.48.ebuild:
  Added ~mips, bug 300221.

  18 Mar 2010; Jeremy Olexa <darkside@gentoo.org> Digest-SHA-5.48.ebuild:
  add ~x86-solaris ~sparc-solaris kw, as tested on bug 308683

  13 Feb 2010; Raúl Porcel <armin76@gentoo.org> Digest-SHA-5.48.ebuild:
  Add ~m68k/~s390/~sh wrt #300221
