@@ -1,0 +1,17 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Digest-SHA/Digest-SHA-5.700.0.ebuild,v 1.1 2011/12/19 15:58:23 tove Exp $
+
+EAPI=4
+
+MODULE_AUTHOR=MSHELOR
+MODULE_VERSION=5.70
+inherit perl-module
+
+DESCRIPTION="Perl extension for SHA-1/224/256/384/512"
+
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~x86-fbsd ~x86-freebsd ~hppa-hpux ~ia64-hpux ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x86-solaris"
+IUSE=""
+
+SRC_TEST="do"
