@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST Digest-SHA-5.47.tar.gz 39864 RMD160 fd57e3595bd196726b0ff47ddf9d0c8d72ae637e SHA1 eaf4d3cdd4f35b6ede4d56b52e3d5b816b3e432e SHA256 9d17d884d6a77005bbac581628d9e30cb5edde72cda1dce98c6536a25b8369f6
 DIST Digest-SHA-5.48.tar.gz 40002 RMD160 a0ff58c33ef8a7446e199dddc7ba0eae95c99618 SHA1 fb6585dd578033167b03e424502b548864db6671 SHA256 e34ae3011c4bfdd6ea438b792755529ba961eb2b80194eff8656e7ec926fe623
@@ -8,6 +8,7 @@ DIST Digest-SHA-5.60.tar.gz 41964 RMD160 fee63b8a68e1e2fd839449af94815e6312371a2
 DIST Digest-SHA-5.61.tar.gz 42118 RMD160 8489d65cd03f846e2e62407034b7e895d09207a1 SHA1 1807dd3f26b3c56809b236eef4a67bef9a59b25b SHA256 b40ac640527623cf04425b6ebd7d55779303e9e0e1295429c838c0ca62c77724
 DIST Digest-SHA-5.62.tar.gz 42104 RMD160 b38180fd0917c97935969f3c6a53f8b46a68c8e8 SHA1 8f7f8dd001be0880feff582124521fd4af6d5e66 SHA256 141772e3ee528afa5375a96df5b01f3bbb8c1f370d30af035cc5ddef0c3993c6
 DIST Digest-SHA-5.63.tar.gz 41704 RMD160 3bb355029d208f51e13e5af76eaecf5e7742b176 SHA1 ce147e1e19484e4d2ab9065a9eeb34cdaff9d356 SHA256 c20d8a150a61c61ad3e5031ed5daedd4f43fdc927e69dd9eb56c8a7f39fe9e5a
+DIST Digest-SHA-5.70.tar.gz 42104 RMD160 406c327f3b90c7082d5632bbed6191a422c3dfb2 SHA1 1a52044249665945821fb2c1412898a712cd983d SHA256 c6e54f43509917b9607921ac086ce9914adf6267ea41903f798a8e820e0df512
 EBUILD Digest-SHA-5.47.ebuild 510 RMD160 8f3decebbff5133c6f98ab4fb6d7dfd0421ef418 SHA1 50c950c27dbc8263452c8704f4a25905635fae3a SHA256 dfcebe71f6a9f56931b6dd0945ba0d69451c597c1eaa7114daba2558d35ffe68
 EBUILD Digest-SHA-5.48.ebuild 577 RMD160 9fc2436b081e6c93b85640c9cbfab4e3449094be SHA1 2f32949070c29e58ba52caa0de6a5fdc21455023 SHA256 1a31334688cff5ba2a011a7e391ba5eec16c0ec36e8f02df1222b94fcff28b37
 EBUILD Digest-SHA-5.500.ebuild 546 RMD160 2231545fdbdca331773f5a818218477b7266523b SHA1 c738e361459c4f44cad302c23a0c022b0df34db9 SHA256 a4942012ab20dcf38bf5ec1521404fb4b4c76ccb0e709044a912225b44a446d2
@@ -15,12 +16,13 @@ EBUILD Digest-SHA-5.600.0.ebuild 548 RMD160 874e6c35198b8f4e5ab94e66ffffb7eb335f
 EBUILD Digest-SHA-5.610.0.ebuild 548 RMD160 c80460b4a2ad638030100f0315509876a9a5baeb SHA1 905c04ffa97a4e8f133c994189c30532a91b05d5 SHA256 f9980727d26a60dd44b511389fdf14e96add7ce7e6560fd24ad68d37dcc5c04d
 EBUILD Digest-SHA-5.620.0.ebuild 647 RMD160 31a86e060f04c88e4037b5262afcae49fd45c93e SHA1 80e8f6dfe217297953be0235671cbc627498dc9c SHA256 b7bd29f223645b337a359151912806f80760e3c495cd54f9014b6f6ffa417d8a
 EBUILD Digest-SHA-5.630.0.ebuild 655 RMD160 a914a2123e445f3639b02369f5abc2f7e1cfc75a SHA1 f705ef3ffff6c456ffb209e0ae196e76e5a21321 SHA256 27248ba92d983f687110306e02b5b69fa34987304557ece3a81c4d6b520c74cd
-MISC ChangeLog 7721 RMD160 fd280c198590ce65a24f516fd277375f05a27c49 SHA1 2876885e8d4ee288f6481b71ab03c4b5d9786ade SHA256 a9cec67cd83dcb75db8f31daecda3dead72b21c2814c95425b80384c07854884
+EBUILD Digest-SHA-5.700.0.ebuild 654 RMD160 3e0e6b4d796e6e37986d9a15a294a75bac754caa SHA1 6e605c51b73e6dc1a728a3068c6e34c1b1bf48c8 SHA256 11e8898f9bc4d11c259b485fc9bd8840dec3f1e1a0322cd1b4c458a02c097558
+MISC ChangeLog 7847 RMD160 85f354119748116bc3c937e9d50ead7094612c4d SHA1 64b84a470fbb6f244924f610974a52b4d1ac1b83 SHA256 54f26ee285baffb3f5b8c21e8b882bf9461e1c2bfdfd19e73dbecafb7c321811
 MISC metadata.xml 236 RMD160 9b6856642c2ba74a2d7cc1305c3330e5a6c08043 SHA1 148aad1202fe3d916ceadfde563fdc832c724004 SHA256 ad6f9c4724e8c0b2b9a2c366816283c83cb7837154a3d98e257a2ae60edbe281
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (FreeBSD)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk7nNbAACgkQGpDnPLSHuMBswQCbBJeMetGv10dd7x2z7XMb3MB1
-Y3kAoLBTHTkJ9kN5mqEyxZPPqPAUU4IY
-=A9ut
+iEYEAREIAAYFAk7vXyQACgkQV3J2n04EauwnKACfaTo6uppZNOVHlVBA65ZPx8mI
+DosAniSXQrgan3JSlTElOplxQQx6Unpd
+=Lroq
 -----END PGP SIGNATURE-----
