@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/Digest-SHA
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Digest-SHA/ChangeLog,v 1.30 2011/12/13 11:22:56 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Digest-SHA/ChangeLog,v 1.31 2011/12/19 15:58:23 tove Exp $
+
+*Digest-SHA-5.700.0 (19 Dec 2011)
+
+  19 Dec 2011; Torsten Veller <tove@gentoo.org> +Digest-SHA-5.700.0.ebuild:
+  Version bump
 
   13 Dec 2011; Naohiro Aota <naota@gentoo.org> Digest-SHA-5.630.0.ebuild:
   Add ~x86-fbsd
